# aegis-disk

./: .gitignore  Cargo.toml  README.md  aegis-report.md
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/analysis/: duplicate.rs  file_type.rs  insight.rs  large.rs  mod.rs  residue.rs  rule.rs
src/cleaner/: mod.rs  plan.rs  trash.rs
src/export/: json.rs  markdown.rs  mod.rs
src/fs/: metadata.rs  mod.rs  safety.rs  scanner.rs
src/tui/: events.rs  mod.rs  state.rs  view.rs
src/utils/: format.rs  mod.rs
target-tui-check/: .rustc_info.json
target-tui-check/debug/.fingerprint/aegis-disk-011c4cb940c5a3bb/: test-bin-aegis-disk  test-bin-aegis-disk.json
target-tui-check/debug/.fingerprint/aegis-disk-07708122a58945b4/: dep-lib-aegis_disk  lib-aegis_disk  lib-aegis_disk.json
target-tui-check/debug/.fingerprint/aegis-disk-1ecd3f4aef758e11/: dep-lib-aegis_disk  lib-aegis_disk  lib-aegis_disk.json
target-tui-check/debug/.fingerprint/aegis-disk-525d9d1dcfbd4dd0/: dep-lib-aegis_disk  lib-aegis_disk  lib-aegis_disk.json
target-tui-check/debug/.fingerprint/aegis-disk-a223b0dc32ce54aa/: test-integration-test-core  test-integration-test-core.json
target-tui-check/debug/.fingerprint/aegis-disk-c1d5853e221cd7dd/: dep-test-lib-aegis_disk  test-lib-aegis_disk  test-lib-aegis_disk.json
target-tui-check/debug/.fingerprint/aegis-disk-efc4cbfcb481c88a/: bin-aegis-disk  bin-aegis-disk.json
target-tui-check/debug/.fingerprint/aegis-disk-f28fe296b5e61065/: bin-aegis-disk  bin-aegis-disk.json
tests/: core.rs
(+713 files in other folders)
