[package]
name = "aegis-disk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
humansize = "2"
rayon = "1"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
